--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -62,4 +62,24 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/grd" />
 
+    <EditText
+        android:id="@+id/inputFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:clickable="false"
+        android:focusable="false"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:textColor="@color/color4"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="550dp"/>
+
+
 </RelativeLayout>
