--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -28,11 +28,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginTop="626dp"
-        android:layout_marginEnd="293dp"
-        android:layout_marginBottom="39dp"
-        android:background="@drawable/lista" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="621dp"
+        android:layout_marginEnd="294dp"
+        android:layout_marginBottom="43dp"
+        android:background="@drawable/lista"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/BotonMas"
@@ -46,7 +47,8 @@
         android:layout_marginTop="626dp"
         android:layout_marginEnd="167dp"
         android:layout_marginBottom="47dp"
-        android:background="@drawable/mas" />
+        android:background="@drawable/mas"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/BotonGrafica"
@@ -60,18 +62,13 @@
         android:layout_marginTop="627dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/grd" />
+        android:background="@drawable/grd"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/inputFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:clickable="false"
-        android:focusable="false"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        android:textColor="@color/color4"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -79,7 +76,14 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="550dp"/>
+        android:layout_marginBottom="550dp"
+        android:background="@android:color/transparent"
+        android:clickable="false"
+        android:focusable="false"
+        android:textAlignment="center"
+        android:textColor="@color/color4"
+        android:textSize="25sp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 
 </RelativeLayout>
