--- a/app/src/main/res/layout/activity_pantalla_gastos_categorias.xml
+++ b/app/src/main/res/layout/activity_pantalla_gastos_categorias.xml
@@ -32,7 +32,8 @@
         android:layout_marginTop="623dp"
         android:layout_marginEnd="287dp"
         android:layout_marginBottom="29dp"
-        android:background="@drawable/cerrar" />
+        android:background="@drawable/cerrar"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/BotonMasC"
@@ -46,7 +47,8 @@
         android:layout_marginTop="628dp"
         android:layout_marginEnd="169dp"
         android:layout_marginBottom="45dp"
-        android:background="@drawable/mas" />
+        android:background="@drawable/mas"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
         android:id="@+id/BotonListaC"
@@ -60,15 +62,13 @@
         android:layout_marginTop="629dp"
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="38dp"
-        android:background="@drawable/lista" />
+        android:background="@drawable/lista"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
         android:id="@+id/inputFecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:background="@android:color/transparent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -77,8 +77,12 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="13dp"
         android:layout_marginBottom="550dp"
+        android:background="@android:color/transparent"
+        android:clickable="false"
+        android:focusable="false"
         android:textAlignment="center"
         android:textColor="@color/color4"
-        android:textSize="25sp" />
+        android:textSize="25sp"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </RelativeLayout>
