--- a/app/src/main/res/layout/activity_graficos_por_meses.xml
+++ b/app/src/main/res/layout/activity_graficos_por_meses.xml
@@ -9,14 +9,59 @@
 
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="361dp" />
+        android:layout_width="387dp"
+        android:layout_height="291dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="11dp" />
 
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/chart2"
-        android:layout_width="match_parent"
-        android:layout_height="368dp"
-        android:layout_below="@+id/chart"
-        android:layout_marginTop="2dp" />
+        android:layout_width="389dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="417dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="11dp" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="119dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="686dp"
+        android:fontFamily="@font/acme"
+        android:text="Gastos:"
+        android:textColor="@color/color4"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="187dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="357dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="318dp"
+        android:fontFamily="@font/acme"
+        android:text="Ingresos:"
+        android:textColor="@color/color4"
+        android:textSize="25sp" />
 </RelativeLayout>
