--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -113,7 +113,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="358dp"
         android:layout_marginBottom="693dp"
-        android:background="@drawable/flecha" />
+        android:background="@drawable/cerraresion" />
 
 
 </RelativeLayout>
